--- a/src/app/components/played-dialog/played-dialog.component.scss
+++ b/src/app/components/played-dialog/played-dialog.component.scss
@@ -5,4 +5,5 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 16px;
 }
